wtx-macros-tests/tests/fail/responses_can_not_have_type_params.stderr
error: Responses can have at most one lifetime. Types aren't supported
 --> tests/fail/responses_can_not_have_type_params.rs:7:10
  |
7 |   struct Res<T>(T);
  |          ^^^

error: aborting due to 1 previous error

